# cursor-intelligent-memory

./: .actrc  .dockerignore  .env.mcp  .env.mcp.example  .gitignore  Dockerfile  Makefile  README.en-us.md  README.md  RELEASE.md  mcp-config-example.json  pyproject.toml  test_discovery.py
.cursor/: mcp.json
.cursor/memory/long-term/: github-actions-development.md  known-issues.md  project-knowledge.md
.cursor/rules/: intelligent-memory.mdc  memory-mcp-usage.mdc  readme-maintenance.mdc
.github/workflows/: docker-publish.yml  release.yml  simple-test.yml
docs/: deployment-summary.md  docker-publishing.md  github-actions-testing.md
src/memory_mcp_server/: __init__.py  prompts.py  server.py
